[tool.poetry]
name = "py-hpsu-monitor"
version = "0.3.0"
description = ""
authors = ["Felix Stürmer <stuermer@weltenwort.de>"]
include = ["default-config.toml"]

[tool.poetry.dependencies]
python = "^3.7"
python-can = "^3.3.4"
typer = "^0.3.2"
tomlkit = "^0.7.0"
typing_extensions = "^3.10.0"
pydantic = "^1.8.1"
asyncio-mqtt = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pylint = "^2.8.3"
black = "^21.4b2"
pytest-watch = "^4.2.0"
fabric = {version = "^2.6.0", optional = true}
pytest-asyncio = "^0.15.1"
mock = "^4.0.3"

[tool.poetry.extras]
deploy = ["fabric"]

[tool.poetry.scripts]
py-hpsu-monitor = "py_hpsu_monitor.cli:app"

[tool.black]
disable = ["C0330", "C0326"]
max-line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
