[tool.poetry]
name = "py-hpsu-monitor"
version = "0.4.0"
description = ""
authors = ["Felix Stürmer <stuermer@weltenwort.de>"]
include = ["default-config.toml"]

[tool.poetry.dependencies]
python = "^3.7"
python-can = "^3.3.4"
typer = "^0.4.0"
tomlkit = "^0.7.2"
typing_extensions = "^4.0.0"
pydantic = "^1.8.2"
asyncio-mqtt = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pylint = "^2.10.2"
black = "^21.11b1"
pytest-watch = "^4.2.0"
fabric = {version = "^2.6.0", optional = true}
pytest-asyncio = "^0.16.0"
mock = "^4.0.3"

[tool.poetry.extras]
deploy = ["fabric"]

[tool.poetry.scripts]
py-hpsu-monitor = "py_hpsu_monitor.cli:app"

[tool.black]
disable = ["C0330", "C0326"]
max-line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
